[package]
name = "runiq_ahash"
version = "1.2.3" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>","sero01000"]
description = "An efficient way to filter duplicate lines from input, à la uniq."
repository = "https://github.com/sero01000/runiq_ahash"
keywords = ["filtering", "logging", "unique"]
categories = ["algorithms", "command-line-utilities", "text-processing"]
readme = "README.md"
edition = "2018"
license = "MIT"

[profile.release]
opt-level = 3
lto = true

[badges]
travis-ci = { repository = "sero01000/runiq_ahash" }

[dependencies]
bytelines = "2.4"
clap = { version = "3.2.25", features = ["derive"] }
fnv = "1.0.7"
scalable_bloom_filter = "0.1.1"
ahash = "0.8.3"

